@@ -2018,7 +2018,11 @@ function arrayToBarGraph ($array, $max_width, $table_values="CELLPADDING=5",
 	$string_to_return = "\n  <table $table_values>";
 	if ($col_1_head || $col_2_head)
 	{
-		$string_to_return.="<tr><td></td><td><span class=\"admin\">$col_1_head</span></td><td><span class=\"admin\">$col_2_head</span></td></tr>";
+		$string_to_return.=	"<tr>"\n".
+					"\n\t<td></td>".
+					"\n\t<td class=\"admin\">$col_1_head</td>".
+					"\n\t<td class=\"admin\">$col_2_head</td>".
+					"</tr>";
 	}
 	if ($max_value > 0)
 	{
@@ -2039,7 +2043,7 @@ function arrayToBarGraph ($array, $max_width, $table_values="CELLPADDING=5",
 			. " width=\"$bar_width\" height=\"10\" alt=\"BAR\"></td>"
 			. "\n\t</tr>";
 	}
-	$string_to_return .= "\n  </table";
+	$string_to_return .= "\n  </table>";
 	return($string_to_return);
 }
 
