@@ -1,3 +1,8 @@
+2004-03-28 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b150
+
+	* Bugfix: Closed a notclossed Table Tag.
+		  (Catched by Jade)
+
 2004-03-27 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b149
 
 	* Bugfix: Fixed a place where $GALLERY_BASEDIR was used, but undefined.
